davinci: Set hardware revision property
The bootloader sets androidboot.hwversion, use this and set the ro.boot.hardware.revision property in order to show it in settings.

Change-Id: I3c6c678bf055091ea9fcb2a1524d321e2c1be043

--- a/rootdir/etc/init.davinci.rc
+++ b/rootdir/etc/init.davinci.rc
@@ -1,3 +1,6 @@
+on property:ro.boot.hwversion=*
+    setprop ro.boot.hardware.revision ${ro.boot.hwversion}
+
 on property:ro.boot.hwc=CN
     setprop bluetooth.device.default_name "Redmi K20"
 
